@@ -17,6 +17,10 @@
 * Fix a bug by which keyword arguments to find_parent() were not
   being passed on. [bug=1126734]
 
+* Now that lxml's segfault on invalid doctype has been fixed, fix a
+  corresponding problem on the Beautiful Soup end that was previously
+  invisible. [bug=984936]
+
 = 4.1.3 (20120820) =
 
 * Skipped a test under Python 2.6 and Python 3.1 to avoid a spurious
